--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_datepicker: ^20.2.43
+  google_maps_flutter: ^2.1.10
+  sliding_up_panel: ^2.0.0+1
+  timeline_tile: ^2.0.0
+  flutter_dash: ^1.0.0
 
 dev_dependencies:
   flutter_test:
