--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   timeline_tile: ^2.0.0
   flutter_dash: ^1.0.0
+  flutter_rating_stars: ^1.0.3+4
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/img/1.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
