[build] 플러터 빌드 파일 수정

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -9,9 +9,14 @@ server {
 
     include mime.types;
     
+    root /home/alt/build;
+    index index.html;
+    try_files $uri $uri/ /index.html;
+    
     location /static/ {
       alias /data/static/;
     }
+    
 
     location / {
         proxy_pass http://django_container:8000;
