--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_dash: ^1.0.0
   flutter_rating_stars: ^1.0.3+4
   http: ^0.13.5
+  intl: ^0.17.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
