--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -15,7 +15,7 @@ server {
     
 
     location / {
-        root /home/alt/build;
+        root /home/alt/build/web;
         index index.html;
         try_files $uri $uri/ /index.html;
         
