--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -12,13 +12,14 @@ server {
     location /static/ {
       alias /data/static/;
     }
-    
 
     location / {
-        root /home/alt/build/web;
+        root /home/alt/build;
         index index.html;
         try_files $uri $uri/ /index.html;
-        
+    }
+
+    location /api/ {
         proxy_pass http://django_container:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
